<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.android.polishforenglish_quiz.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/AppHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header" />

            <TextView
                android:id="@+id/header_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_intro"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/header_question"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            style="@style/container_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/QuestionHeader"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/q1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/q1_radio_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/q1_answer1_radio_button"
                        style="@style/radio_button_style"
                        android:text="@string/q1_answer1" />

                    <RadioButton
                        android:id="@+id/q1_answer2_radio_button"
                        style="@style/radio_button_style"
                        android:text="@string/q1_answer2" />

                    <RadioButton
                        android:id="@+id/q1_answer3_radio_button"
                        style="@style/radio_button_style"
                        android:text="@string/q1_answer3" />

                    <RadioButton
                        android:id="@+id/q1_answer4_radio_button"
                        style="@style/radio_button_style"
                        android:text="@string/q1_answer4" />
                </RadioGroup>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/container_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                style="@style/QuestionHeader"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/q2"
                android:textColor="@android:color/holo_red_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/q2_radio_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/q2_answer1_radio_button"
                        style="@style/radio_button_style"
                        android:text="@string/q2_answer1" />

                    <RadioButton
                        android:id="@+id/q2_answer2_radio_button"
                        style="@style/radio_button_style"
                        android:text="@string/q2_answer2" />

                    <RadioButton
                        android:id="@+id/q2_answer3_radio_button"
                        style="@style/radio_button_style"
                        android:text="@string/q2_answer3" />

                    <RadioButton
                        android:id="@+id/q2_answer4_radio_button"
                        style="@style/radio_button_style"
                        android:text="@string/q2_answer4" />
                </RadioGroup>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/container_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/QuestionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/q3_answer1_check_box"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q3_answer1" />

                <CheckBox
                    android:id="@+id/q3_answer2_check_box"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q3_answer2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/q3_answer3_check_box"
                    style="@style/check_box_style"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_answer3" />

                <CheckBox
                    android:id="@+id/q3_answer4_check_box"
                    style="@style/check_box_style"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_answer4" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/container_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/q4"
                style="@style/QuestionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4" />

            <EditText
                android:id="@+id/q4_answer_edit_text"
                android:background="@drawable/options_container_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/q4_hint"
                android:inputType="number" />


        </LinearLayout>

        <LinearLayout
            style="@style/container_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/QuestionHeader"
                android:text="@string/q5" />

            <LinearLayout
                android:id="@+id/q5_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/q5_answer1_check_box"
                        style="@style/check_box_style"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_answer1" />

                    <CheckBox
                        android:id="@+id/q5_answer2_check_box"
                        style="@style/check_box_style"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_answer2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/q5_answer3_check_box"
                        style="@style/check_box_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_answer3" />

                    <CheckBox
                        android:id="@+id/q5_answer4_check_box"
                        style="@style/check_box_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_answer4" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/container_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/QuestionHeader"
                android:text="@string/q6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/q6_answer1_check_box"
                    style="@style/check_box_style"
                    android:layout_height="wrap_content"
                    android:text="@string/q6_answer1" />

                <CheckBox
                    android:id="@+id/q6_answer2_check_box"
                    style="@style/check_box_style"
                    android:layout_height="wrap_content"
                    android:text="@string/q6_answer2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/q6_answer3_check_box"
                    style="@style/check_box_style"
                    android:layout_height="wrap_content"
                    android:text="@string/q6_answer3" />

                <CheckBox
                    android:id="@+id/q6_answer4_check_box"
                    style="@style/check_box_style"
                    android:layout_height="wrap_content"
                    android:text="@string/q6_answer4" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/container_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/QuestionHeader"
                android:text="@string/q7" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/q7_answer1_check_box"
                    style="@style/check_box_style"
                    android:layout_height="wrap_content"
                    android:text="@string/q7_answer1" />

                <CheckBox
                    android:id="@+id/q7_answer2_check_box"
                    style="@style/check_box_style"
                    android:layout_height="wrap_content"
                    android:text="@string/q7_answer2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/q7_answer3_check_box"
                    style="@style/check_box_style"
                    android:layout_height="wrap_content"
                    android:text="@string/q7_answer3" />

                <CheckBox
                    android:id="@+id/q7_answer4_check_box"
                    style="@style/check_box_style"
                    android:layout_height="wrap_content"
                    android:text="@string/q7_answer4" />
            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="submitButtonHandler"
            android:text="@string/submit_button" />

        <Button
            android:id="@+id/show_answers_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="showCorrectAnswers"
            android:text="@string/show_answers_button"
            android:visibility="gone" />
    </LinearLayout>


</ScrollView>